# EDI_Practica2

./: CMakeLists.txt  Declaraciones.h  cabeceras.h
cpp/: GestorServidores.cpp  Servidor.cpp  cola.cpp  lista.cpp  main.cpp
h/: GestorServidores.h  Servidor.h  cola.h  lista.h
